demo/models/phi-2-modelcar/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 30s
  labels:
    inferenceservice-name: phi-2-modelcar
  name: phi-2-modelcar
  namespace: summit-connect-2025
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: phi-2-modelcar-predictor
    weight: 100
  wildcardPolicy: None
